# Scoutpost

./: AGENTS.md  README.md  app.py  pyproject.toml
src/cvscout/: __init__.py  schemas.py  track.py  tracking.py  video.py
tests/: test_schemas.py  test_tracking.py  test_video.py
