[project]
name = "cvscout"
version = "0.1.0"
description = "FRC CV scouting Streamlit app scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "pydantic>=2.7",
  "streamlit>=1.37",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvscout"]
